# driver-development-book

./: .gitignore  README.md  index.html
.github/workflows/: codebase_checks.yaml  doc_check_publish.yaml  doc_check_publish_v1.yaml  doc_check_publish_v2.yaml  mdbook.yml
chapter_snapshots/_0_bare/: Cargo.toml
chapter_snapshots/_0_simple_bare_metal/: Cargo.toml
chapter_snapshots/_1_simple_bare_metal_with_monitoring/: Cargo.toml
chapter_snapshots/_1_simple_bare_metal_with_rt/: Cargo.toml
chapter_snapshots/_2_simple_bare_metal_with_monotoring/: Cargo.toml
chapter_snapshots/_2_simple_bare_metal_with_monotoring/src/: main.rs
chapter_snapshots/_3_simple_bare_metal_with_defmt_monitoring/: Cargo.toml
chapter_snapshots/today/: Cargo.toml  x.excalidraw
contribution_book/: book.toml
contribution_book/book/: 404.html  codebase_checks.html  doc_checks.html  how_tasks_are_selected.html  how_tasks_get_resolved.html  index.html  intro.html  print.html  project_management.html  pull_request_checks.html  searchindex.js  searchindex.json  standard_references.html
contribution_book/src/: doc_checks.md  intro.md  project_management.md  pull_request_checks.md  standard_references.md
driver_book/: book.toml  coloured_emojis.md
driver_book/book/: 404.html  abstraction.html  cargo-flash.html  debugging.html  defmt.html  (+17 more)
driver_code/: Cargo.toml
driver_code/no_std_template/: Cargo.toml
driver_code/no_std_template/.cargo/: config.toml
driver_code/no_std_template/src/: main.rs
driver_code/no_std_template/src/lds/: script.lds
driver_code/system_timer/: Cargo.toml
(+268 files in other folders)
