[package]
name = "simple_bare_metal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
critical-section = "1.1.2"
# embedded-hal = "1.0.0"
esp-println = { version = "0.8.0", features = ["esp32c3"] }
portable-atomic = "1.6.0"
riscv-rt = {version="0.12.2", features=["single-hart"]}
# esp-backtrace = { version = "0.10.0", features = ["esp32c3", "panic-handler", "exception-handler", "print-uart"] }
# esp32c3-hal = "0.14.0"
