cargo-features = ["codegen-backend"]


[package]
name = "no_std_template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.dev]
panic = "abort"
# codegen-backend = "cranelift"

[profile.release]
panic = "abort" 
# codegen-backend = "cranelift"
