[package]
name = "system_timer"
version = "0.1.0"
edition = "2021"

[dependencies]
# cortex-m = "0.7.7"
# cortex-m-rt = "0.7.3"
critical-section = "1.1.3"
riscv = "0.11.1"
riscv-rt = { version = "0.12.2", optional = false }
# svd2rust = "0.33.4"
vcell = "0.1.3"


[features]
# rt = ["riscv-rt"]
# riscv-rt = ["dep:riscv-rt"]
